Verifiserer andeler per AG og ikke per arbeidsforholdId